twitch gateway, http client, middlewares, gameDto
