# dto/GameDto.js
@@ -1,0 +1,9 @@
+class GameDto {
+    constructor(twitchId, name, boxArtUrl) {
+        this.twitchId = twitchId;
+        this.name = name;
+        this.boxArtUrl = boxArtUrl;
+    }
+}
+
+module.exports = GameDto;
