# models/Game.js
@@ -2,7 +2,7 @@ const mongoose = require('mongoose');
 const Schema = mongoose.Schema;
 
 const GameSchema = new Schema({
-    twitchId: Number,
+    twitchId: { type: Number, default: 1, index: true },
     name: String,
     boxArtUrl: String,
 });
